@@ -243,6 +243,7 @@ since 1999.  If I missed your name, let me know.
 * David Schlecht
 * Russell Scibetti
 * Max Schubert
+* Stefan Schurtz
 * Thomas Sebastien
 * Brian Seklecki
 * Denis Seleznyov
